fix(list): fix overlap in codebase list
fix the overlap in the codebase list due to adding a new element once a che workspace is created

--- a/src/app/create/codebases/codebases-item-workspaces/codebases-item-workspaces.component.less
+++ b/src/app/create/codebases/codebases-item-workspaces/codebases-item-workspaces.component.less
@@ -14,4 +14,5 @@
   height: 32px;
   margin-right: 5px;
   width: 200px;
+  display: inline-block;
 }
